--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,7 @@
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
+            <!-- log4j 사용 위해 주석 -->
             <!-- <exclusions> <exclusion> <groupId>javax.mail</groupId> <artifactId>mail</artifactId>
                 </exclusion> <exclusion> <groupId>javax.jms</groupId> <artifactId>jms</artifactId>
                 </exclusion> <exclusion> <groupId>com.sun.jdmk</groupId> <artifactId>jmxtools</artifactId>
@@ -131,6 +132,7 @@
             <version>3.0.1</version> <scope>provided</scope> </dependency> -->
         <!-- <dependency> <groupId>javax.servlet</groupId> <artifactId>servlet-api</artifactId>
             <version>2.5</version> <scope>provided</scope> </dependency> -->
+
         <!-- gson java인스턴스를 JSN타입의 문자열로 변환해야하는 일 -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -169,6 +171,7 @@
             <artifactId>HikariCP</artifactId>
             <version>3.4.5</version>
         </dependency>
+
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
@@ -204,7 +207,6 @@
             <version>0.4.8</version>
         </dependency>
 
-
         <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -236,7 +238,6 @@
             <version>1.4.7</version>
         </dependency>
 
-
         <!-- commons-io -->
         <dependency>
             <groupId>commons-io</groupId>
@@ -245,20 +246,11 @@
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk -->
-<!--        <dependency>-->
-<!--            <groupId>com.amazonaws</groupId>-->
-<!--            <artifactId>aws-java-sdk</artifactId>-->
-<!--            <version>1.0.12</version>-->
-<!--        </dependency>-->
-
-        <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk -->
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-s3</artifactId>
             <version>1.11.1001</version>
         </dependency>
-
-
 
     </dependencies>
     <build>
